Remove some references to old choco-solver library