@@ -251,8 +251,6 @@ test {
     maxParallelForks=project.gradle.startParameter.maxWorkerCount
     testLogging.showStandardStreams = true
 
-    // Temporary workaround for old choco-solver-2.1.1
-    jvmArgs '--add-opens', 'java.base/sun.security.action=ALL-UNNAMED'
     // Usage: ./gradlew test -Dabs.junit.erlang=0 skips (most) erlang tests
     systemProperty 'abs.junit.erlang', System.getProperty('abs.junit.erlang')
 
